<?xml version="1.0"?>
<package format="2">
  <name>rrt_planning</name>
  <version>2.0.0</version>
  <description>Some RRT-based planners</description>

  <maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>

  <license>GPLv3</license>

  <author email="alessandro.riva@polimi.it">Alessandro Riva</author>
  <author email="davide.tateo@polimi.it">Davide Tateo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>nav_core</depend>
  <depend>geometry_msgs</depend>
  <depend>angles</depend>
  <depend>dynamicvoronoi</depend>
  <depend>voronoi_planner</depend>

  <export>
  	<nav_core plugin="${prefix}/plugins/rrt_planner_plugin.xml" />
  	<nav_core plugin="${prefix}/plugins/theta_star_planner_plugin.xml" />
  	<nav_core plugin="${prefix}/plugins/theta_star_rrt_planner_plugin.xml" />
	<nav_core plugin="${prefix}/plugins/voronoi_rrt_planner_plugin.xml" />
	<nav_core plugin="${prefix}/plugins/rrt_star_planner_plugin.xml" />
	<nav_core plugin="${prefix}/plugins/nh_planner_plugin.xml"/>
	<nav_core plugin="${prefix}/plugins/nh_planner_L2_plugin.xml"/>
    <nav_core plugin="${prefix}/plugins/voronoi_plugin.xml"/>
  </export>

</package>
